--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,7 +8,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: "Assign Team and Persons"
-      uses: rowi1de/auto-assign-review-teams@v0.0.3
+      uses: sinchang-bot/auto-assign-review-teams@master
       with:
         repo-token: ${{ secrets.GITHUB_TOKEN }}
         teams: ""     # only works for GitHub Organisation/Teams
