--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,7 +9,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: "Assign Team and Persons"
-      uses: rowi1de/auto-assign-review-teams@v0.0.5
+      uses: rowi1de/auto-assign-review-teams@master
       with:
         repo-token: ${{ secrets.GITHUB_TOKEN }}
         teams: "no-team"     # only works for GitHub Organisation/Teams
